# dotfiles

./: .bash_profile  .bashrc  .xinitrc
.config/: dolphinrc  pavucontrol.ini
.config/Code - OSS/: Cookies  Network Persistent State  TransportSecurity  machineid
.config/Ryujinx/: Config.json
.config/alacritty/: alacritty.toml  alacritty.yml
.config/dconf/: user
.config/desmume/: 6149 - Pokemon Black Version 2 (DSi Enhanced)(U)(frieNDS).dsv  config  config.cfg
.config/discord/: Cookies  Network Persistent State  Preferences  TransportSecurity  settings.json
.config/dmenu/: config.h  dmenu
.config/emacs/: .lsp-session-v1  diary  diary~  init.el  init.el~
.config/heroic/: Cookies  Network Persistent State  TransportSecurity  areweanticheatyet.json  config.json
.config/legendary/: aliases.json  assets.json  installed.json  user.json  version.json
.config/lutris/: lutris.conf
.config/neofetch/: config.conf
.config/nvim/: init.lua  init.vim  lazy-lock.json  lazyvim.json
.config/pavucontrol/: pavucontrol.ini
.config/picom/: picom.conf  picom.conf~
.config/pulse/: 71715a03c8c340da84c6e110dcaa5a1e-card-database.tdb  71715a03c8c340da84c6e110dcaa5a1e-default-sink  71715a03c8c340da84c6e110dcaa5a1e-default-source  71715a03c8c340da84c6e110dcaa5a1e-device-volumes.tdb  71715a03c8c340da84c6e110dcaa5a1e-stream-volumes.tdb  cookie  default.pa  system.pa
.config/xmonad/: \  xmonad.cabal  xmonad.hs  xmonad.hs.bak  xmonad.hs~
.config/xmonad/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
(+4957 files in other folders)
