cabal-version:      3.8
name:               xmonad-config
version:            0.1.0.0

synopsis: My xmonad configs
license:            NONE
author:             mArcio-Lmano
maintainer:         marcio.mano

build-type:         Simple
extra-doc-files:    CHANGELOG.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable xmonad-config
  import:           warnings
  main-is: xmonad.hs
  build-depends: base >=4.14 && <5,
                 xmonad,
                 xmonad-contrib,
                 X11 >= 1.10 && <2,
                 containers >=0.6 && <0.7
  default-language: Haskell2010
